# compression_horizon

./: .gitignore  .pre-commit-config.yaml  README.md  REFACTOR_VALIDATION.md  prepare_submission.sh  pyproject.toml  pytightconfig.json  requirements.txt
configs/: accelerate.yaml
experiments/: compression_horizon.md  example_exp.md
notebooks/: Compression_generation_outside.ipynb  Compression_hybrid_loss.ipynb  Dataset_reproduction.ipynb  fanfics_urls.txt  llm_judge.pkl  samples.pkl
paper/: example_paper.bib  example_paper.tex  figure_progressive_cramming.tikz
scripts/: activation_distillation.py  arc_compress_evaluate.py  compression_neighborhood.py  compression_random_projection.py  compute_embeddings_stat.py  compute_hessian_spectrum.py  early_exit.py  evaluate_kuratov_compression_errors.py  experiments.sh  generate_from_compression_token.py  generate_from_progressive.py  hellaswag_compress_evaluate.py  hellaswag_compression_head_evaluate.py  hybrid_loss.py  interpolation.py  interpolation_reconstruction.py  mmlu_compress_evaluate.py  progressive_experiments.sh  progressive_experiments_final_repro.sh  reproducing.py  reproduction.py  results.py  tda_trajectory_analysis.py  visialize_compression_embeddings.py  visualize_attention_hijacking.py  visualize_bezier.py  visualize_lr_scheduler.py  visualize_multiple_trajectories.py  visualize_progressive_embeddings.py
tests/: bar.py  compile_all_scripts.py  test_compression_head_trainer.py  test_config.py  test_full_cramming_golden.py  test_full_cramming_trainer.py  test_intervention.py  test_low_dim_trainer.py  (+4 more)
(+112 files in other folders)
